--- a/mongodb/Dockerfile
+++ b/mongodb/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:14.10
+FROM ubuntu:latest
 MAINTAINER Abey Tom <abey.tom@appdynamics.com>
 
 RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 7F0CEB10
