--- a/rabbitmq/Dockerfile
+++ b/rabbitmq/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER Abey Tom abey.tom@appdynamics.com
 
 RUN yum install -y wget unzip tar 
 
-RUN rpm -Uvh http://mirror.sfo12.us.leaseweb.net/epel/7/x86_64/e/epel-release-7-5.noarch.rpm
+RUN rpm -Uvh https://dl.fedoraproject.org/pub/epel/7/x86_64/e/epel-release-7-7.noarch.rpm
 
 RUN yum install -y erlang
 
