--- a/docker-machineagent/Dockerfile
+++ b/docker-machineagent/Dockerfile
@@ -7,5 +7,6 @@ RUN sudo apt-get -q install unzip
 RUN unzip -d /machineagent/ /machineagent-bundle-64bit-linux.zip
 RUN unzip -d /machineagent/monitors/ DockerMonitor.zip
 ADD config.yml /machineagent/monitors/DockerMonitor
+ADD socket-command.sh /machineagent/monitors/DockerMonitor
  
 CMD ["/bin/bash","/machineagent/bin/machine-agent"]
