--- a/docker-machineagent/Dockerfile
+++ b/docker-machineagent/Dockerfile
@@ -1,9 +1,9 @@
-FROM ubuntu:latest
+FROM ubuntu:14.04
 
 RUN mkdir /machineagent
 ADD machineagent-bundle-64bit-linux.zip /
 ADD DockerMonitor.zip /
-RUN sudo apt-get -q install unzip
+RUN apt-get update && apt-get -q install unzip
 RUN unzip -d /machineagent/ /machineagent-bundle-64bit-linux.zip
 RUN unzip -d /machineagent/monitors/ DockerMonitor.zip
 ADD config.yml /machineagent/monitors/DockerMonitor
