Used EPEL Release

--- a/varnish/Dockerfile
+++ b/varnish/Dockerfile
@@ -2,7 +2,8 @@ FROM centos:centos7
 MAINTAINER Abey Tom <abey.tom@appdynamics.com>
 
 
-RUN rpm -iUvh http://dl.fedoraproject.org/pub/epel/7/x86_64/e/epel-release-7-5.noarch.rpm
+#RUN rpm -iUvh http://dl.fedoraproject.org/pub/epel/7/x86_64/e/epel-release-7-5.noarch.rpm
+RUN yum -y install epel-release
 RUN yum -y update
 RUN yum -y install varnish
 
